@@ -13,6 +13,8 @@
   <meta name="email" value="">
                 <meta name="author" value="Stefan Bodewig">
   <meta name="email" value="stefan.bodewig@epost.de">
+                <meta name="author" value="Magesh Umasankar">
+  <meta name="email" value="">
         
       <title>Apache Ant - Ant News</title>
     </head>
@@ -23,12 +25,6 @@
         <tr>
                 <td align="left">
     <a href="http://jakarta.apache.org"><img src="images/jakarta-logo.gif" border="0"/></a>
-    </td>
-    <td align="center">
-    <a href="http://www.sdmagazine.com"><img src="images/sdm_productivity_award.gif" border="0" height="75" width="135"/></a>
-    </td>
-    <td align="center">
-    <a href="http://www.javaworld.com"><img src="images/jw_ec_logo_winner2002.gif" border="0" height="85" width="230"/></a>
     </td>
     <td align="right">
               <a href="http://jakarta.apache.org/ant/"><img src="./images/ant_logo_large.gif" alt="Apache Ant" border="0"/></a>
@@ -100,6 +96,23 @@
         <table border="0" cellspacing="0" cellpadding="2" width="100%">
     <tr><td bgcolor="#525D76">
       <font color="#ffffff" face="arial,helvetica,sanserif">
+        <a name="Ant 1.5.1"><strong>Ant 1.5.1</strong></a>
+      </font>
+    </td></tr>
+    <tr><td>
+      <blockquote>
+                        <h3>October 3, 2002 - Ant 1.5.1 Available !</h3>
+                                <p>The final version of Ant 1.5.1 is now available for 
+     <a href="http://jakarta.apache.org/builds/jakarta-ant/release/v1.5.1/">
+     download</a>. If you have any feedback on this release, feel free to join the 
+     discussion on the ant-dev and ant-user mailing lists.
+     </p>
+                    </blockquote>
+    </td></tr>
+  </table>
+        <table border="0" cellspacing="0" cellpadding="2" width="100%">
+    <tr><td bgcolor="#525D76">
+      <font color="#ffffff" face="arial,helvetica,sanserif">
         <a name="Ant 1.5.1Beta1"><strong>Ant 1.5.1Beta1</strong></a>
       </font>
     </td></tr>
@@ -128,7 +141,7 @@
                                 <h3>July 10, 2002 - Ant 1.5 Released!</h3>
                                 <p>The final version of Ant 1.5 is now available for 
      <a href="http://jakarta.apache.org/builds/jakarta-ant/release/v1.5/">
-     download</a>. If you have any feedback on ths release, feel free to join the 
+     download</a>. If you have any feedback on this release, feel free to join the 
      discussion on the ant-dev and ant-user mailing lists.
      </p>
                     </blockquote>
@@ -196,6 +209,7 @@
                         <h3>Apr 29, 2002: Ant wins <em>Software Development</em> magazine's
     2002 Productivity Award.</h3>
                                 <p>
+    <a href="http://www.sdmagazine.com"><img src="images/sdm_productivity_award.gif" border="0" height="75" width="135" align="right" /></a>
     Ant has been awarded a <strong>2002 Productivity Award</strong> by
     <a href="http://www.sdmagazine.com/"><em>Software Development</em></a>
     magazine.  Read the
@@ -215,7 +229,9 @@
       <blockquote>
                         <h3>Mar 26, 2002: Ant wins the JavaWorld Editors' Choice
     Award</h3>
-                                <p>Ant has won the JavaWorld Editors' Choice Award for
+                                <p>
+    <a href="http://www.javaworld.com"><img src="images/jw_ec_logo_winner2002.gif" border="0" height="85" width="230" align="right" /></a>
+    Ant has won the JavaWorld Editors' Choice Award for
     <strong>Most Useful Java Community-Developed Technology</strong>.
     Read the
     <a href="http://www.javaworld.com/javaworld/jw-03-2002/jw-0326-awards.html "> full article</a> -- or jump directly to the bit about
