@@ -24,12 +24,6 @@
                 <td align="left">
     <a href="http://jakarta.apache.org"><img src="images/jakarta-logo.gif" border="0"/></a>
     </td>
-    <td align="center">
-    <a href="http://www.sdmagazine.com"><img src="images/sdm_productivity_award.gif" border="0" height="75" width="135"/></a>
-    </td>
-    <td align="center">
-    <a href="http://www.javaworld.com"><img src="images/jw_ec_logo_winner2002.gif" border="0" height="85" width="230"/></a>
-    </td>
     <td align="right">
               <a href="http://jakarta.apache.org/ant/"><img src="./images/ant_logo_large.gif" alt="Apache Ant" border="0"/></a>
         </td>
@@ -100,14 +94,14 @@
         <table border="0" cellspacing="0" cellpadding="2" width="100%">
     <tr><td bgcolor="#525D76">
       <font color="#ffffff" face="arial,helvetica,sanserif">
-        <a name="Ant 1.5.1beta1"><strong>Ant 1.5.1beta1</strong></a>
+        <a name="Ant 1.5.1"><strong>Ant 1.5.1</strong></a>
       </font>
     </td></tr>
     <tr><td>
       <blockquote>
-                        <h3>Apache Ant 1.5.1beta1 Released!</h3>
-                                <p>Version 1.5.1beta1 of Ant has been released. It is available for download 
-      <a href="http://jakarta.apache.org/builds/jakarta-ant/release/v1.5.1beta1/">
+                        <h3>Apache Ant 1.5.1 Released!</h3>
+                                <p>Version 1.5.1 of Ant has been released. It is available for download 
+      <a href="http://jakarta.apache.org/builds/jakarta-ant/release/v1.5.1/">
       here</a>.
     </p>
                     </blockquote>
@@ -187,7 +181,7 @@ on.
     <tr><td>
       <blockquote>
                         <p>
-You can view the documentation for the current release (Apache Ant 1.5)
+You can view the documentation for the current release (Apache Ant 1.5.1)
 <a href="manual/index.html">online</a>
 </p>
                                 <p>
@@ -208,11 +202,11 @@ Comprehensive documentation is included in the source and binary distributions.
     You can download the latest release:
     </p>
                                 <ul>
-        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5/bin/">
+        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5.1/bin/">
                 Download the binary release</a></li>
-        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5/src/">
+        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5.1/src/">
                 Download the source release</a></li>
-        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5/rpms/">
+        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5.1/rpms/">
                 Download source or binary RPMs</a></li>
     </ul>
                     </blockquote>
