@@ -4,10 +4,20 @@
   <properties>
     <author email="">Conor MacNeill</author>
     <author email="stefan.bodewig@epost.de">Stefan Bodewig</author>
+    <author email="">Magesh Umasankar</author>
     <title>Ant News</title>
   </properties>
 
 <body>
+  <section name="Ant 1.5.1">
+    <h3>October 3, 2002 - Ant 1.5.1 Available !</h3>
+    <p>The final version of Ant 1.5.1 is now available for 
+     <a href="http://jakarta.apache.org/builds/jakarta-ant/release/v1.5.1/">
+     download</a>. If you have any feedback on this release, feel free to join the 
+     discussion on the ant-dev and ant-user mailing lists.
+     </p>
+  </section>
+
   <section name="Ant 1.5.1Beta1">
     <h3>August 19, 2002 - Ant 1.5.1 Beta1 Available !</h3>
     <p>The first beta version of Ant 1.5.1 is now available for 
@@ -26,7 +36,7 @@
     <h3>July 10, 2002 - Ant 1.5 Released!</h3>
     <p>The final version of Ant 1.5 is now available for 
      <a href="http://jakarta.apache.org/builds/jakarta-ant/release/v1.5/">
-     download</a>. If you have any feedback on ths release, feel free to join the 
+     download</a>. If you have any feedback on this release, feel free to join the 
      discussion on the ant-dev and ant-user mailing lists.
      </p>
   </section>
@@ -62,6 +72,7 @@
     <h3>Apr 29, 2002: Ant wins <em>Software Development</em> magazine&apos;s
     2002 Productivity Award.</h3>
     <p>
+    <a href="http://www.sdmagazine.com"><img src="images/sdm_productivity_award.gif" border="0" height="75" width="135" align="right"/></a>
     Ant has been awarded a <strong>2002 Productivity Award</strong> by
     <a href="http://www.sdmagazine.com/"><em>Software Development</em></a>
     magazine.  Read the
@@ -74,7 +85,9 @@
     <h3>Mar 26, 2002: Ant wins the JavaWorld Editors&apos; Choice
     Award</h3>
 
-    <p>Ant has won the JavaWorld Editors&apos; Choice Award for
+    <p>
+    <a href="http://www.javaworld.com"><img src="images/jw_ec_logo_winner2002.gif" border="0" height="85" width="230" align="right"/></a>
+    Ant has won the JavaWorld Editors&apos; Choice Award for
     <strong>Most Useful Java Community-Developed Technology</strong>.
     Read the
     <a href="http://www.javaworld.com/javaworld/jw-03-2002/jw-0326-awards.html
