@@ -143,6 +143,11 @@
             <td>1.5</td>
             <td>10 July 2002</td>
           </tr>
+
+          <tr>
+            <td>1.5.1</td>
+            <td>3 October 2002</td>
+          </tr>
         </table>
       </answer>
     </faq>
