@@ -9,10 +9,10 @@
 
 <body>
 
-  <section name="Ant 1.5.1beta1">
-    <h3>Apache Ant 1.5.1beta1 Released!</h3>
-    <p>Version 1.5.1beta1 of Ant has been released. It is available for download 
-      <a href="http://jakarta.apache.org/builds/jakarta-ant/release/v1.5.1beta1/">
+  <section name="Ant 1.5.1">
+    <h3>Apache Ant 1.5.1 Released!</h3>
+    <p>Version 1.5.1 of Ant has been released. It is available for download 
+      <a href="http://jakarta.apache.org/builds/jakarta-ant/release/v1.5.1/">
       here</a>.
     </p>
   </section>
@@ -77,7 +77,7 @@ on.
   <section name="Documentation">
   
 <p>
-You can view the documentation for the current release (Apache Ant 1.5)
+You can view the documentation for the current release (Apache Ant 1.5.1)
 <a href="manual/index.html">online</a>
 </p>
 
@@ -92,11 +92,11 @@ Comprehensive documentation is included in the source and binary distributions.
     You can download the latest release:
     </p>
     <ul>
-        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5/bin/">
+        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5.1/bin/">
                 Download the binary release</a></li>
-        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5/src/">
+        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5.1/src/">
                 Download the source release</a></li>
-        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5/rpms/">
+        <li><a href="http://www.apache.org/dist/jakarta/jakarta-ant/release/v1.5.1/rpms/">
                 Download source or binary RPMs</a></li>
     </ul>  
   </section>
